##########################
# Setup.py Configuration #
##########################
[metadata]
name = pathme
version = 0.1.13-dev
description = Harmonizing pathway databases using Biological Expression Language (BEL)
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/PathwayMerger/PathMe
download_url = https://pypi.org/project/pathme/
project_urls =
    Bug Tracker = https://github.com/PathwayMerger/PathMe/issues
    Source Code = https://github.com/PathwayMerger/PathMe
    Documentation = https://pathme.readthedocs.io/en/latest/

# Author information
author = Daniel Domingo-Fernández, Sarah Mubeen, Josep Marin Llao, Charles Tapley Hoyt
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Daniel Domingo-Fernández
maintainer_email = daniel.domingo.fernandez@scai.fraunhofer.de

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Pathway Databases
    Systems Biology
    Networks Biology
    Biological Expression Language

[options]
install_requires =
    click==7.0
    pandas==0.24.2
    tqdm==4.31.1
    numpy==1.16.3
    rdflib==4.2.2
    bio2bel==0.2.1
    bio2bel_hgnc==0.2.2
    bio2bel_chebi==0.2.1
    bio2bel_kegg==0.2.5
    bio2bel_wikipathways==0.2.3
    bio2bel_reactome==0.2.3
    pybel==0.13.2
    pybel-tools>=0.7.2
    pybel-cx==0.1.3

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    pathme = pathme.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pathme
omit =
    src/pathme/__main__.py
    src/pathme/cli.py
    tests/*
    docs/*

[coverage:paths]
source =
    src/pathme
    .tox/*/lib/python*/site-packages/pathme

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
